<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context="ec1app.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="35dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_app_name"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.48" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_marginEnd="64dp"
                android:src="@drawable/register_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_fullName_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/primary"
            app:startIconContentDescription="@string/register_fullName_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:cornerRadius="25dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="25dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_nickname_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_person_pin_24"
            app:startIconTint="@color/primary"
            app:startIconContentDescription="@string/register_nickname_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phoneNumber_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:startIconTint="@color/primary"
            app:startIconContentDescription="@string/register_phoneNumber_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/primary"
            app:startIconContentDescription="@string/register_email_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_input_content_description_end_icon"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/primary"
            app:startIconContentDescription="@string/register_password_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/register_title"
            app:cornerRadius="20dp"
            android:layout_marginTop="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿Tienes una cuenta?"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/textLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Iniciar Sesión"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>